crates/vize_patina/src/rules/script/snapshots/vize_patina__rules__script__valid_define_emits__tests__invalid_references_local_variable.snap
---
source: crates/vize_patina/src/rules/script/valid_define_emits.rs
expression: result.diagnostics
---
[
    LintDiagnostic {
        rule_name: "script/valid-define-emits",
        severity: Error,
        message: "defineEmits() cannot reference locally-declared variables.",
        start: 37,
        end: 42,
        help: Some(
            "defineEmits() is hoisted above the component setup, so its argument can only use imports or literals, not locally-declared variables.",
        ),
        labels: [],
        fix: None,
    },
]
